--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
